<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/liner_more"
    android:layout_width="@dimen/x196"
    android:layout_height="wrap_content"
    android:layout_below="@id/top_btn_bar1"
    android:layout_alignParentRight="true"
    android:background="@drawable/shape_background_line"
    android:orientation="vertical"
    android:visibility="gone"
    tools:showIn="@layout/activity_read_pdf">

    <TextView
        android:id="@+id/img_pdf_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginTop="@dimen/x20"
        android:drawableLeft="@drawable/img_read_pdf_update"
        android:drawablePadding="@dimen/x5"
        android:gravity="center"
        android:text="@string/string_pdf_update"
        android:textColor="@color/book_title_color"
        android:textSize="@dimen/x20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x2"
        android:layout_marginTop="@dimen/x10"
        android:background="@color/book_title_color"></View>

    <TextView
        android:id="@+id/img_read_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginTop="@dimen/x20"
        android:drawableLeft="@drawable/img_pdf_read_update"
        android:drawablePadding="@dimen/x5"

        android:gravity="center"
        android:text="@string/string_read_update"
        android:textColor="@color/book_title_color"
        android:textSize="@dimen/x20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x2"
        android:layout_marginTop="@dimen/x10"
        android:background="@color/book_title_color"></View>

    <TextView
        android:id="@+id/img_read_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginTop="@dimen/x20"
        android:drawableLeft="@drawable/img_pdf_read_position"
        android:drawablePadding="@dimen/x5"
        android:gravity="center"
        android:text="@string/string_position_read"
        android:textColor="@color/book_title_color"
        android:textSize="@dimen/x20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x2"
        android:layout_marginTop="@dimen/x10"
        android:background="@color/book_title_color"></View>
    <TextView
        android:id="@+id/img_read_voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginTop="@dimen/x20"
        android:drawableLeft="@drawable/img_voices"
        android:drawablePadding="@dimen/x5"
        android:gravity="center"
        android:text="@string/string_read_voice"
        android:textColor="@color/book_title_color"
        android:textSize="@dimen/x20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x2"
        android:layout_marginTop="@dimen/x10"
        android:background="@color/book_title_color"></View>
</LinearLayout>