<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/top_btn_bar1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y66"
        android:layout_marginTop="2px"
        android:background="@drawable/shape_bottom_line">

        <TextView
            android:drawablePadding="@dimen/x8"
            android:gravity="center"
            android:drawableLeft="@drawable/img_question_back"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:textSize="@dimen/x24"
            android:text="@string/string_book"
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/img_refush"
            android:layout_marginLeft="@dimen/x26"
            android:layout_toRightOf="@id/img_back"
            android:src="@drawable/img_question_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <!--上一个XX按钮-->

        <RelativeLayout
            android:id="@+id/real_more"
            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:background="@drawable/img_more"
            android:layout_width="@dimen/x65"
            android:layout_height="@dimen/y65">

            <TextView
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/x18"
                android:text="@string/string_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginRight="@dimen/x20"
            android:id="@+id/real_ml"
            android:orientation="vertical"

            android:layout_toLeftOf="@id/real_more"
            android:background="@drawable/img_question_catalog"
            android:layout_width="@dimen/x65"
            android:layout_height="@dimen/y65">

            <TextView
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/x18"
                android:text="@string/string_ml"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/liner_more"
        android:background="@drawable/shape_background_line"
        android:layout_width="@dimen/x196"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_btn_bar1"
        android:layout_alignParentRight="true"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="@dimen/x20"
            android:layout_marginLeft="@dimen/x20"
            android:id="@+id/img_pdf_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/img_read_pdf_update"
            android:drawablePadding="@dimen/x5"
            android:gravity="center"
            android:text="@string/string_pdf_update"
            android:textColor="@color/book_title_color"
            android:textSize="@dimen/x20" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x2"
            android:layout_marginTop="@dimen/x10"
            android:background="@color/book_title_color"></View>

        <TextView
            android:layout_marginTop="@dimen/x20"
            android:layout_marginLeft="@dimen/x20"
            android:drawablePadding="@dimen/x5"
            android:id="@+id/img_read_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/img_pdf_read_update"

            android:gravity="center"
            android:text="@string/string_read_update"
            android:textColor="@color/book_title_color"
            android:textSize="@dimen/x20" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x2"
            android:layout_marginTop="@dimen/x10"
            android:background="@color/book_title_color"></View>

        <TextView
            android:layout_marginTop="@dimen/x20"
            android:layout_marginLeft="@dimen/x20"
            android:drawablePadding="@dimen/x5"
            android:id="@+id/img_read_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/img_pdf_read_position"
            android:gravity="center"
            android:text="@string/string_position_read"
            android:textColor="@color/book_title_color"
            android:textSize="@dimen/x20" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x2"
            android:layout_marginTop="@dimen/x10"
            android:background="@color/book_title_color"></View>
    </LinearLayout>
</RelativeLayout>
