<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frag_ment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/x65"
        android:layout_marginBottom="@dimen/x135"></FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x70">

            <ImageView
                android:id="@+id/img_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_main_book_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="@dimen/x3"
                android:gravity="center"
                android:text="@string/string_book"
                android:textColor="@color/black"
                android:textSize="@dimen/x18" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x140">

            <ImageView
                android:id="@+id/img_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_main_read_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="@dimen/x3"
                android:gravity="center"
                android:text="@string/string_read"
                android:textColor="@color/black"
                android:textSize="@dimen/x18" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x140">

            <ImageView
                android:id="@+id/img_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_main_question_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="@dimen/x3"
                android:gravity="center"
                android:text="@string/string_question"
                android:textColor="@color/black"
                android:textSize="@dimen/x18" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x140">

            <ImageView
                android:id="@+id/img_my"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_main_my_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="@dimen/x3"
                android:gravity="center"
                android:text="@string/string_my"
                android:textColor="@color/black"
                android:textSize="@dimen/x18" />
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>