<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_color">


    <RelativeLayout
        android:id="@+id/real"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/y470"
        android:background="@drawable/img_my_back"></RelativeLayout>

    <LinearLayout
        android:layout_width="@dimen/x760"
        android:layout_height="@dimen/y140"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/x340"
        android:background="@drawable/shape_background_white">

        <LinearLayout

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y30"
            android:layout_marginRight="@dimen/x30"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_UI"
                android:layout_width="@dimen/x60"
                android:layout_height="@dimen/y60"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/x5"
                android:src="@drawable/img_my_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="UI测试"
                android:textColor="@color/black"
                android:textSize="@dimen/x24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x30"
            android:layout_marginTop="@dimen/y30"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_technology"
                android:layout_width="@dimen/x60"
                android:layout_height="@dimen/y60"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/x15"
                android:src="@drawable/img_my_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="技术测试"
                android:textColor="@color/black"
                android:textSize="@dimen/x24" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/liner"
        android:layout_below="@id/real"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linger_online"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x80"
        android:layout_below="@id/real"
        android:layout_marginTop="@dimen/x25"
        android:background="@color/white">

        <TextView
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/x24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/img_my_xianshang"
            android:drawablePadding="@dimen/x25"
            android:gravity="center"
            android:text="@string/string_xians" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/liner_test"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x80"
        android:layout_below="@id/linger_online"
        android:layout_marginTop="@dimen/x4"
        android:background="@color/white">

        <TextView
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/x24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/img_test"
            android:drawablePadding="@dimen/x25"
            android:gravity="center"
            android:text="@string/string_ces" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/liner_upgrade"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x80"
        android:layout_below="@id/liner_test"
        android:layout_marginTop="@dimen/x4"
        android:background="@color/white">

        <TextView
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/x24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/img_upgrade"
            android:drawablePadding="@dimen/x25"
            android:gravity="center"
            android:text="@string/string_shengj" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/liner_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x80"
        android:layout_below="@id/liner_upgrade"
        android:layout_marginTop="@dimen/x4"
        android:background="@color/white">

        <TextView
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/x24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/img_pwd"
            android:drawablePadding="@dimen/x25"
            android:gravity="center"
            android:text="@string/string_pwd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/liner_end"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x80"
        android:layout_below="@id/liner_pwd"
        android:layout_marginTop="@dimen/x10"
        android:background="@color/white"
        android:orientation="horizontal">

         <TextView
             android:gravity="center"
             android:layout_gravity="center"
             android:text="@string/string_end"
             android:textColor="@color/black"
             android:textSize="@dimen/x30"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>
