<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="@dimen/x460"
        android:layout_height="@dimen/y280"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginTop="@dimen/x20"
        android:layout_marginRight="@dimen/x10"
        android:background="@drawable/shape_background_white">

        <LinearLayout
            android:layout_margin="@dimen/x10"
            android:background="@drawable/shape_background_line"
            android:id="@+id/liner_book"
            android:layout_width="@dimen/x151"
            android:layout_height="@dimen/y201">

            <ImageView
                android:id="@+id/img_book"
                android:layout_width="@dimen/x150"
                android:layout_height="@dimen/y200"
                />
        </LinearLayout>

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:layout_below="@id/liner_book"
            android:background="@color/text_color"></View>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_line"
            android:layout_marginLeft="@dimen/x10">

            <FrameLayout
                android:id="@+id/fram_update"
                android:layout_width="@dimen/x95"
                android:layout_height="@dimen/y35"
                android:layout_marginTop="@dimen/x10"
                android:background="@drawable/img_back_ground_button">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/string_Toupdate"
                    android:textSize="@dimen/x20" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fram_bookmessage"
                android:layout_width="@dimen/x95"
                android:layout_height="@dimen/y35"
                android:layout_marginLeft="@dimen/x19"
                android:layout_marginTop="@dimen/x10"
                android:background="@drawable/img_back_ground_button">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/string_book_message"
                    android:textSize="@dimen/x20" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fram_lookpdf"
                android:layout_width="@dimen/x95"
                android:layout_height="@dimen/y35"
                android:layout_marginLeft="@dimen/x19"
                android:layout_marginTop="@dimen/x10"
                android:background="@drawable/img_back_ground_button">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/string_look_pdf"
                    android:textSize="@dimen/x20" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/fram_ok"
                android:layout_width="@dimen/x95"
                android:layout_height="@dimen/y35"
                android:layout_marginLeft="@dimen/x19"
                android:layout_marginTop="@dimen/x10"
                android:background="@drawable/shape_background_hui">

                <TextView
                    android:id="@+id/text_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/string_ok"
                    android:textSize="@dimen/x20" />
            </FrameLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x10"
            android:layout_toRightOf="@id/liner_book"
            android:text="语文五年级下册"
            android:textColor="@color/black"
            android:textSize="@dimen/x24" />

        <TextView
            android:id="@+id/text_title_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_title"
            android:layout_marginTop="@dimen/x10"
            android:layout_toRightOf="@id/liner_book"
            android:minLines="1"
            android:text="语文五年级下册"
            android:textColor="@color/gray"
            android:textSize="@dimen/x20" />

        <LinearLayout
            android:id="@+id/liner_type_ground"
            android:layout_width="@dimen/x80"
            android:layout_height="@dimen/x30"
            android:layout_below="@id/text_title_two"
            android:layout_marginTop="@dimen/x18"
            android:layout_toRightOf="@id/liner_book">

            <TextView
                android:id="@+id/text_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/x5"
                android:gravity="center"
                android:text="编辑中"
                android:textColor="@color/white"
                android:textSize="@dimen/x15" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="@dimen/x145"
            android:layout_height="@dimen/x14"
            android:layout_below="@id/liner_type_ground"
            android:layout_marginLeft="@dimen/x10"
            android:layout_marginTop="@dimen/x70"
            android:layout_toRightOf="@id/img_book"
            android:max="100"
            android:progress="30"
            android:progressDrawable="@drawable/progressbar_bg"
            android:visibility="gone" />
    </RelativeLayout>
</LinearLayout>
